--- a/9-dars/input/style.css
+++ b/9-dars/input/style.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Montserrat:wght@300;700&display=swap');
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat Alternates', sans-serif;
 }
 
 body {
@@ -15,7 +19,7 @@ body {
 .container {
     position: relative;
     background-color: white;
-    padding: 40px 70px;
+    padding: 50px 40px;
     border-radius: 10px;
 }
 
@@ -56,7 +60,7 @@ body {
     color: black;
 }
 
-input[type=submit]{
+input[type=submit] {
     background-color: rgb(0, 183, 255);
     border: none;
     border-radius: 10px;
@@ -65,7 +69,7 @@ input[type=submit]{
     transition: .5s;
 }
 
-input[type=submit]:hover{
+input[type=submit]:hover {
     background-color: rgb(255, 0, 85);
     color: white;
 }
