--- a/2-bosqich/style.css
+++ b/2-bosqich/style.css
@@ -32,8 +32,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 45%;
-    height: 70%;
+    width: 350px;
+    height: 500px;
     background-color: white;
     padding: 40px 30px;
     border-radius: 15px;
